chore(docs): cleanup formatting

--- a/static/app/components/core/principles/content-and-voice/content-and-voice.mdx
+++ b/static/app/components/core/principles/content-and-voice/content-and-voice.mdx
@@ -9,7 +9,7 @@ status: in-progress
 
 There are two different ways to write copy within the Sentry app. There’s normal **plain speech**, and there’s our branded, personality-rich “**Sentry Voice**.” Sentry Voice is a little snarky (but never mean), jokey, and quick-witted. The jokes should be simple, if it needs explanation, it isn’t gonna work.
 
-Generally, you should default to plain and clear speech in the product. This includes page names, table headings, widgets, CTAs, Seer responses, and descriptive text. Occasionally it will be appropriate to use the “Sentry Voice,” like on 404 pages, new product announcements and other areas that don’t directly interfere with someone’s workflow. Within the product, assume users are frustrated and in a hurry — above all our goal is to make sure they can find what they are looking for quickly, and explain what is happening clearly.
+Generally, you should default to plain and clear speech in the product. This includes page names, table headings, widgets, CTAs, Seer responses, and descriptive text. Occasionally it will be appropriate to use the “Sentry Voice,” like on 404 pages, new product announcements and other areas that don’t directly interfere with someone’s workflow. Within the product, assume users are frustrated and in a hurry — above all our goal is to make sure they can find what they are looking for quickly, and explain what is happening clearly.
 
 > ### Examples
 >
@@ -40,7 +40,7 @@ Generally, you should default to plain and clear speech in the product. This inc
 
 ## General Copywriting Guidelines
 
-- Keep it simple — avoid jargon and don’t get fancy. If you are referencing new words or concepts explain them or link out to documentation.
+- Keep it simple—avoid jargon and don’t get fancy. If you are referencing new words or concepts explain them or link out to documentation.
 - We're informative. Always provide straightforward, accurate information, we don't manipulate people into believing we’re anything more than we actually are.
 - Use American spelling
 - Avoid emotional punctuation; for example use “!” sparingly
@@ -48,7 +48,7 @@ Generally, you should default to plain and clear speech in the product. This inc
   - If you don’t know how to use colons (:) or semicolons (;) don’t do it, or ask a copywriter for help.
   - Brief punctuation note: “-” is a hyphen used to join words together or write compound numbers (_sixty-five_, _self-serve_). En-dashes (–), are most commonly used for time ranges (_2020–2022_, _September 1–September 3)_. Insert these without a space on either side. Em-dashes (—) are the longest of the three and act more like true punctuation. You can use these in place of a comma or parentheses, or to indicate when a sentence is taking a new turn (_We want to introduce users to Seer—a new name for our old AI product—which we have rebranded this month_.”
     - Much thanks to [Merriam Webster](https://www.merriam-webster.com/grammar/em-dash-en-dash-how-to-use).
-- Be consistent! Reference our [Icons + CTA Copy Table](https://sentry.sentry.io/stories/core/button#icons) to make sure you are using agreed upon terms in CTA Buttons
+- Be consistent. Reference our [Icons + CTA Copy Table](https://sentry.sentry.io/stories/core/button#icons) to make sure you are using agreed upon terms in CTA Buttons
   - For example Dashboards, Views, Monitors, and Automations are always “Edited” and use the pencil icon
   - When a user is creating a new Dashboard, View etc the language should always be “Create [Object]” with a plus icon
 
@@ -69,16 +69,13 @@ Here are three things to keep in mind when writing with personality on behalf of
 
 Within the app we use title case for all headings, CTAs and labels (including: chart titles, table, chart axes, chart legends, table titles, table column headers, form fields labels, anything in the sidebar). This means the first letter of every word is capitalized, except for conjunctions and “minor” words.
 
-This is true for H1-H3, as well as all CTAs, table headers, and default widgets. As a rule we **never** use all caps in the product.
+This is true for `<Heading>`, as well as all CTAs, table headers, and default widgets. As a rule, we **never** use all caps in the product. If you see `text-transform: uppercase` anywhere, you should remove it.
 
-<aside>
+> **Examples**
+>
+> - Last Seen (column header)
+> - Save As… (CTA Button)
+> - Errors and Outages (sidebar item & H1)
+> - Most Frozen Frames (default widget title)
 
-Examples:
-
-- Last Seen (column header)
-- Save As… (CTA Button)
-- Errors and Outages (sidebar item & H1)
-- Most Frozen Frames (default widget title)
-  </aside>
-
-Not sure? Use [capitalizemytitle.com](https://capitalizemytitle.com/) as a quick gut check.
+Not sure how to convert something? Use [capitalizemytitle.com](https://capitalizemytitle.com/) for a quick gut check.
