--- a/static/app/components/core/principles/content-and-voice/content-and-voice.mdx
+++ b/static/app/components/core/principles/content-and-voice/content-and-voice.mdx
@@ -11,14 +11,17 @@ There are two different ways to write copy within the Sentry app. There’s norm
 
 Generally, you should default to plain and clear speech in the product. This includes page names, table headings, widgets, CTAs, Seer responses, and descriptive text. Occasionally it will be appropriate to use the “Sentry Voice,” like on 404 pages, new product announcements and other areas that don’t directly interfere with someone’s workflow. Within the product, assume users are frustrated and in a hurry — above all our goal is to make sure they can find what they are looking for quickly, and explain what is happening clearly.
 
-> ### Examples
->
-> **Plain speech**
+### Examples
+
+**Plain speech**
+
 > Issues are groups of errors that have a similar stacktrace. Set an alert for new issues, when an issue changes state, frequency of errors, or users affected by an issue.
->
-> **Sentry Voice** 404. Page not found. We looked. And then we gave up. [Button: *Return to a Real Page*]
->
-> Sentry Rollback is here. Forgot everything you did this year? Don’t worry—we have the receipts. Take a look back at your 2024 with Sentry.\*
+
+**Sentry Voice**
+
+> 404, Page not found. We looked. And then we gave up. [Button: *Return to a Real Page*]
+
+> Sentry Rollback is here. Forgot everything you did this year? Don’t worry—we have the receipts. Take a look back at your 2024 with Sentry.
 
 ## When to Use “Sentry Voice” vs. Plain Speech
 
@@ -38,44 +41,65 @@ Generally, you should default to plain and clear speech in the product. This inc
 - Settings pages. These are already complicated enough.
 - Documentation. Users are here to find information quickly and they need to be easily searchable.
 
-## General Copywriting Guidelines
-
-- Keep it simple—avoid jargon and don’t get fancy. If you are referencing new words or concepts explain them or link out to documentation.
-- We're informative. Always provide straightforward, accurate information, we don't manipulate people into believing we’re anything more than we actually are.
-- Use American spelling
-- Avoid emotional punctuation; for example use “!” sparingly
-  - Don’t use weird ones like the interrobang (‽).
-  - If you don’t know how to use colons (:) or semicolons (;) don’t do it, or ask a copywriter for help.
-  - Brief punctuation note: “-” is a hyphen used to join words together or write compound numbers (_sixty-five_, _self-serve_). En-dashes (–), are most commonly used for time ranges (_2020–2022_, _September 1–September 3)_. Insert these without a space on either side. Em-dashes (—) are the longest of the three and act more like true punctuation. You can use these in place of a comma or parentheses, or to indicate when a sentence is taking a new turn (_We want to introduce users to Seer—a new name for our old AI product—which we have rebranded this month_.”
-    - Much thanks to [Merriam Webster](https://www.merriam-webster.com/grammar/em-dash-en-dash-how-to-use).
-- Be consistent. Reference our [Icons + CTA Copy Table](https://sentry.sentry.io/stories/core/button#icons) to make sure you are using agreed upon terms in CTA Buttons
-  - For example Dashboards, Views, Monitors, and Automations are always “Edited” and use the pencil icon
-  - When a user is creating a new Dashboard, View etc the language should always be “Create [Object]” with a plus icon
-
 ## Writing in “Sentry Voice”
 
-You should not be using this voice within regular workflows, or when someone is trying to complete a task. Even when using Sentry Voice make sure to front-load main information, and not let personality get in the way of content. For example in an error message, make sure the first few words of the body capture the problem first (”**404 Page not found**. We looked. And then we gave up.”).
+You should not be using this voice within regular workflows, or when someone is trying to complete a task. Even when using Sentry Voice make sure to front-load main information, and not let personality get in the way of content. For example in an error message, make sure the first few words of the body capture the problem first (_404 Page not found_. We looked. And then we gave up.).
 
 Here are three things to keep in mind when writing with personality on behalf of Sentry:
 
-1. We have empathy for our users: they should feel understood and like we appropriately grasp the gravity of their situation. Whatever they're going through, we get it. When we are snarky we are snarky towards the situation they are in, not towards the user themself.
-2. We're self-aware: look, we know were not curing cancer over here. We help developers, but we're not changing the world. Don't make bold claims with aspirational copy.
-3. We have fun: this stuff is dry, so look for opportunity to have fun with the copy (while keeping everything above in mind).
-4. **If you feel confused or unsure where and how to use Sentry Voice, ask our in-house copy writer in the #team-design slack channel.**
+1. **We have empathy for our users**: they should feel understood and like we appropriately grasp the gravity of their situation. Whatever they're going through, we get it. When we are snarky we are snarky towards the situation they are in, not towards the user themself.
+2. **We're self-aware**: look, we know were not curing cancer over here. We help developers, but we're not changing the world. Don't make bold claims with aspirational copy.
+3. **We have fun**: this stuff is dry, so look for opportunity to have fun with the copy (while keeping everything above in mind).
+4. **If you feel confused or unsure where and how to use Sentry Voice, ask our in-house copy writer in the `#discuss-design` Slack channel.**
 
-(Modified from the [Brand identity writing style guide](https://brand.getsentry.com/document/5#/style-guides/writing-style-guide))
+> [!TIP] Heads up!
+> If you're looking for more information, this was modified from the [brand identity writing style guide](https://brand.getsentry.com/document/5#/style-guides/writing-style-guide).
 
-## Titles and Headings. Use Title Case!
+## General Copywriting Guidelines
 
-Within the app we use title case for all headings, CTAs and labels (including: chart titles, table, chart axes, chart legends, table titles, table column headers, form fields labels, anything in the sidebar). This means the first letter of every word is capitalized, except for conjunctions and “minor” words.
+**Keep it simple**&mdash;avoid jargon and don’t get fancy. If you are referencing new words or concepts explain them or link out to documentation.
+
+**Be informative**. Always provide straightforward, accurate information, we don't manipulate people into believing we’re anything more than we actually are.
+
+**Use American spelling**. Apologies to our colleagues who prefer the Queen’s English.
+
+**Avoid emotional punctuation**; for example use `!` sparingly.
+
+**Don’t use weird punctuation** like the interrobang `‽`. Not everyone shares your affinity for esoteric glyphs.
+
+**Use punctuation thoughtfully**. If you don’t know how to use colons `:` or semicolons `;` it is better not to try. Alternatively, ask a copywriter for help.
+
+> [!TIP] A brief aside on dashes
+> Hyphens, the `-` or `&hyphen;` symbol, are used to join words together or write compound numbers (_sixty-five_, _self-serve_).
+>
+> En-dashes, the `–` or `&ndash;` symbol, are most commonly used for time ranges (_2020–2022_, _September 1–September 3)_.
+> Insert these without a space on either side.
+>
+> Em-dashes, the `—` or `&mdash;` symbol, are the longest of the three and act more like true punctuation.
+> You can use these in place of a comma or parentheses, or to indicate when a sentence is taking a new turn.
+> (_We want to introduce users to Seer&mdash;a new name for our old AI product&mdash;which we have rebranded this month_.)
+>
+> For additional information, refer to [Merriam Webster](https://www.merriam-webster.com/grammar/em-dash-en-dash-how-to-use).
+
+**Be consistent.** Reference our [Icons + CTA Copy Table](https://sentry.sentry.io/stories/core/button#icons) to make sure you are using agreed upon terms in CTA Buttons.
+For example, Dashboards, Views, Monitors, and Automations are always “Edited” and use the pencil icon.
+When a user is creating a new Dashboard, View, or Monitor, the language should always be “Create [Object]” with a plus icon.
+
+## Use Title Case for Titles and Headings
+
+Within the app we use title case for all headings, CTAs and labels (including: chart titles, table, chart axes, chart legends, table titles, table column headers, form fields labels, anything in the sidebar).
+This means the first letter of every word is capitalized, except for conjunctions and “minor” words.
 
 This is true for `<Heading>`, as well as all CTAs, table headers, and default widgets. As a rule, we **never** use all caps in the product. If you see `text-transform: uppercase` anywhere, you should remove it.
 
-> **Examples**
->
-> - Last Seen (column header)
-> - Save As… (CTA Button)
-> - Errors and Outages (sidebar item & H1)
-> - Most Frozen Frames (default widget title)
+**Examples**
 
-Not sure how to convert something? Use [capitalizemytitle.com](https://capitalizemytitle.com/) for a quick gut check.
+> Last Seen (column header)
+
+> Save As… (CTA Button)
+
+> Errors and Outages (sidebar item & H1)
+
+> Most Frozen Frames (default widget title)
+
+Not sure how to convert something? Refer to [capitalizemytitle.com](https://capitalizemytitle.com/) for a quick gut check.
