storybook: show import paths (#101643)
@natemoo-re I've added an alternative approach here by returning the
import path from a loader. Do you know if there's a way to match the
code styles here - we seem to use expressive code under the hood, and
it's a bit unclear to me how we could use it here.

<img width="843" height="288" alt="CleanShot 2025-10-16 at 14 30 48"
src="https://github.com/user-attachments/assets/4a537686-4013-4eca-854e-be67d6d338fc"
/>

I would have ideally also liked for that first example to have the
import path and usage example all in a single component, but we can't
interpolate the variables directly in markdown, so we would need to find
an alternative

The example I tried is basically this
```
${types.Alert.importPath} <- unable to interpolate
<Alert ... />
```

Feel free to take over and restyle this, but I think this might be a
slightly easier way to go about the changes

---------

Co-authored-by: getsantry[bot] <66042841+getsantry[bot]@users.noreply.github.com>

--- a/static/app/components/core/avatar/index.mdx
+++ b/static/app/components/core/avatar/index.mdx
@@ -22,13 +22,22 @@ import {SentryAppAvatar} from './sentryAppAvatar';
 import {TeamAvatar} from './teamAvatar';
 import {UserAvatar} from './userAvatar';
 
-import ProjectAvatarAPIReference from '!!type-loader!sentry/components/core/avatar/projectAvatar';
-import UserAvatarAPIReference from '!!type-loader!sentry/components/core/avatar/userAvatar';
+import ProjectAvatarDocumentation from '!!type-loader!@sentry/scraps/avatar/projectAvatar';
+import UserAvatarDocumentation from '!!type-loader!@sentry/scraps/avatar/userAvatar';
 
-export const types = {
-  UserAvatar: UserAvatarAPIReference.UserAvatar,
-  ProjectAvatar: ProjectAvatarAPIReference.ProjectAvatar,
+export const documentation = {
+  ...UserAvatarDocumentation,
+  ...ProjectAvatarDocumentation,
+  props: {
+    ...ProjectAvatarDocumentation.props,
+    ...UserAvatarDocumentation.props,
+  },
+  exports: {
+    ...ProjectAvatarDocumentation.exports,
+    ...UserAvatarDocumentation.exports,
+  },
 };
+
 export const PREVIEW_SIZE = 40;
 
 export const USER = {
