--- a/static/app/components/core/button/button.mdx
+++ b/static/app/components/core/button/button.mdx
@@ -33,9 +33,24 @@ import {
 } from 'sentry/icons';
 import * as Storybook from 'sentry/stories';
 
-import APIReference from '!!type-loader!sentry/components/core/button/index';
+import ButtonDocumentation from '!!type-loader!@sentry/scraps/button';
 
-export const types = {Button: APIReference.Button};
+export const documentation = {
+  exports: {
+    module: ButtonDocumentation.exports.module,
+    exports: {
+      // Button has some exports that we don't want to document, strip them out until they are removed
+      ...Object.fromEntries(
+        Object.entries(ButtonDocumentation.exports.exports).filter(
+          ([key]) => key !== 'StyledButton' && key !== 'ButtonBar'
+        )
+      ),
+    },
+  },
+  props: {
+    ...ButtonDocumentation.props,
+  },
+};
 
 To create a basic button, wrap text in a `<Button>` and pass an `onClick` callback.
 
