--- a/static/app/components/core/text/text.mdx
+++ b/static/app/components/core/text/text.mdx
@@ -17,9 +17,9 @@ import {ExternalLink, Link} from 'sentry/components/core/link';
 import {Heading, Text} from 'sentry/components/core/text';
 import * as Storybook from 'sentry/stories';
 
-import types from '!!type-loader!sentry/components/core/text/text';
+import documentation from '!!type-loader!@sentry/scraps/text/text';
 
-export {types};
+export {documentation};
 
 To create basic text, wrap content in a `<Text>` component. For semantic headings, use `<Heading>` with the appropriate `as` prop.
 
