--- a/static/app/components/core/code/codeBlock.mdx
+++ b/static/app/components/core/code/codeBlock.mdx
@@ -16,9 +16,9 @@ import {CodeBlock} from 'sentry/components/core/code';
 import {IconStar} from 'sentry/icons';
 import * as Storybook from 'sentry/stories';
 
-import types from '!!type-loader!sentry/components/core/code/codeBlock';
+import documentation from '!!type-loader!@sentry/scraps/code/codeBlock';
 
-export {types};
+export {documentation};
 
 export const sampleJavaScript = `Sentry.init({
   // Note, Replay is NOT instantiated below:
