--- a/static/app/components/core/text/heading.mdx
+++ b/static/app/components/core/text/heading.mdx
@@ -18,9 +18,9 @@ import {Container} from 'sentry/components/core/layout';
 import {Heading} from 'sentry/components/core/text';
 import * as Storybook from 'sentry/stories';
 
-import types from '!!type-loader!sentry/components/core/text/heading';
+import documentation from '!!type-loader!@sentry/scraps/text/heading';
 
-export {types};
+export {documentation};
 
 The `<Heading>` component creates semantic heading elements with appropriate default sizes and styling. It ensures proper heading hierarchy while providing visual consistency.
 
