--- a/static/app/components/core/text/prose.mdx
+++ b/static/app/components/core/text/prose.mdx
@@ -15,9 +15,9 @@ import {Heading, Text} from 'sentry/components/core/text';
 import {Prose} from 'sentry/components/core/text/prose';
 import * as Storybook from 'sentry/stories';
 
-import types from '!!type-loader!sentry/components/core/text/prose';
+import documentation from '!!type-loader!@sentry/scraps/text/prose';
 
-export {types};
+export {documentation};
 
 The `<Prose>` component provides consistent vertical spacing and typography for rich text content. It automatically applies proper spacing between prose elements like headings, paragraphs, lists, tables, and blockquotes.
 
