--- a/static/app/components/core/tooltip/tooltip.mdx
+++ b/static/app/components/core/tooltip/tooltip.mdx
@@ -16,9 +16,9 @@ import {Tooltip} from 'sentry/components/core/tooltip';
 import * as Storybook from 'sentry/stories';
 import {space} from 'sentry/styles/space';
 
-import types from '!!type-loader!sentry/components/core/tooltip/index';
+import documentation from '!!type-loader!@sentry/scraps/tooltip/index';
 
-export {types};
+export {documentation};
 
 To create a basic tooltip, wrap any element with `<Tooltip>` and provide the `title` prop with the content to display.
 
