--- a/static/app/components/core/alert/alert.mdx
+++ b/static/app/components/core/alert/alert.mdx
@@ -19,9 +19,9 @@ import {Flex} from 'sentry/components/core/layout';
 import {IconAdd, IconDelete, IconEdit, IconMail} from 'sentry/icons';
 import * as Storybook from 'sentry/stories';
 
-import APIReference from '!!type-loader!sentry/components/core/alert/index';
+import documentation from '!!type-loader!@sentry/scraps/alert';
 
-export const types = {Alert: APIReference.Alert};
+export {documentation};
 
 To create a basic alert, wrap your message in an `<Alert>` component and specify the appropriate type.
 
