--- a/static/app/components/core/code/inlineCode.mdx
+++ b/static/app/components/core/code/inlineCode.mdx
@@ -15,9 +15,9 @@ import {Text} from 'sentry/components/core/text';
 import {Prose} from 'sentry/components/core/text/prose';
 import * as Storybook from 'sentry/stories';
 
-import types from '!!type-loader!sentry/components/core/code/inlineCode';
+import documentation from '!!type-loader!@sentry/scraps/code/inlineCode';
 
-export {types};
+export {documentation};
 
 The `<InlineCode>` component is designed for displaying short code snippets inline with text, such as variable names, function calls, or brief commands. It provides consistent monospace typography and subtle visual styling that distinguishes code from regular text.
 
