--- a/static/app/components/core/disclosure/disclosure.mdx
+++ b/static/app/components/core/disclosure/disclosure.mdx
@@ -24,9 +24,9 @@ import {useLocalStorageState} from 'sentry/utils/useLocalStorageState';
 
 import * as Storybook from 'sentry/stories';
 
-import types from '!!type-loader!sentry/components/core/disclosure/disclosure';
+import documentation from '!!type-loader!@sentry/scraps/disclosure/disclosure';
 
-export {types};
+export {documentation};
 
 To create a disclosure, wrap content in a `<Disclosure>` component.
 
