--- a/static/app/components/core/layout/flex.mdx
+++ b/static/app/components/core/layout/flex.mdx
@@ -9,9 +9,9 @@ resources:
 import {Container, Flex} from 'sentry/components/core/layout';
 import * as Storybook from 'sentry/stories';
 
-import APIReference from '!!type-loader!sentry/components/core/layout/flex';
+import documentation from '!!type-loader!@sentry/scraps/layout/flex';
 
-export const types = {Flex: APIReference.Flex};
+export {documentation};
 
 The `Flex` component is a layout component that extends the `Container` component with CSS flexbox properties. It combines the powerful spacing, sizing, and styling capabilities of `Container` with flexible positioning and alignment controls.
 
