--- a/static/app/components/core/layout/grid.mdx
+++ b/static/app/components/core/layout/grid.mdx
@@ -9,9 +9,9 @@ resources:
 import {Container, Grid} from 'sentry/components/core/layout';
 import * as Storybook from 'sentry/stories';
 
-import APIReference from '!!type-loader!sentry/components/core/layout/grid';
+import documentation from '!!type-loader!@sentry/scraps/layout/grid';
 
-export const types = {Grid: APIReference.Grid};
+export {documentation};
 
 export function CustomComponent(props) {
   return <div {...props} />;
