feat(sub v3): Update pending changes (#102357)
Also converted the pending changes component to a functional component
:)

### 2 or less changes
<img width="1042" height="380" alt="Screenshot 2025-10-30 at 3 56 59 PM"
src="https://github.com/user-attachments/assets/cf775c04-ba8f-407d-ab29-f4d0ead02030"
/>

### 2 or less changes across multiple dates
<img width="1043" height="415" alt="Screenshot 2025-10-30 at 3 59 01 PM"
src="https://github.com/user-attachments/assets/b6c1263d-7799-4162-bae9-35da2a4c427d"
/>

### 3 or more changes
<img width="1115" height="265" alt="Screenshot 2025-10-30 at 4 33 10 PM"
src="https://github.com/user-attachments/assets/9a549da4-4e0e-49c8-974b-d610423830a9"
/>
<img width="1130" height="292" alt="Screenshot 2025-10-30 at 4 32 23 PM"
src="https://github.com/user-attachments/assets/3242a932-86d2-4106-aa62-567e3b0e7801"
/>

### 3 or more changes across multiple dates
<img width="1103" height="246" alt="Screenshot 2025-10-30 at 4 30 55 PM"
src="https://github.com/user-attachments/assets/a6af8ba7-07ef-4a7b-990d-d1bec959d1e2"
/>
<img width="1103" height="313" alt="Screenshot 2025-10-30 at 4 30 50 PM"
src="https://github.com/user-attachments/assets/93ab0ab7-21cb-4705-a8f8-dea8c8434757"
/>

--- a/static/app/components/core/alert/alert.mdx
+++ b/static/app/components/core/alert/alert.mdx
@@ -98,7 +98,7 @@ By default, alerts display appropriate icons based on their type. You can hide i
 
 ### Expandable Content
 
-Alerts can contain expandable content to provide additional details without overwhelming the initial view.
+Alerts can contain expandable content to provide additional details without overwhelming the initial view. Use `handleExpandChange` to add additional logic on expand and on collapse.
 
 <Storybook.Demo>
   <Alert
