feat(design): Add dotted underline variant to Text component (#102708)
Suggested from a designer recently to use `dotted` underline when text
shows a tooltip. This adds `'dotted'` as a literal type to `underline`
and supports showing as dotted. Added a sample to stories too.

<img width="883" height="645" alt="Screenshot 2025-11-04 at 11 20 37 AM"
src="https://github.com/user-attachments/assets/e5ff0edd-29cf-42f8-a85a-0b428058e35f"
/>

--- a/static/app/components/core/text/text.mdx
+++ b/static/app/components/core/text/text.mdx
@@ -102,6 +102,7 @@ Text components support various typography options including bold, italic, under
     <Text bold>Bold text</Text>
     <Text italic>Italic text</Text>
     <Text underline>Underlined text</Text>
+    <Text underline="dotted">Dotted underlined text</Text>
     <Text strikethrough>Strikethrough text</Text>
     <Text bold italic underline>
       Bold italic underlined text
@@ -112,6 +113,7 @@ Text components support various typography options including bold, italic, under
 <Text bold>Bold text</Text>
 <Text italic>Italic text</Text>
 <Text underline>Underlined text</Text>
+<Text underline="dotted">Dotted underlined text</Text>
 <Text strikethrough>Strikethrough text</Text>
 <Text bold italic underline>
   Bold italic underlined text
