--- a/static/app/components/core/slideOverPanel/slideOverPanel.mdx
+++ b/static/app/components/core/slideOverPanel/slideOverPanel.mdx
@@ -42,7 +42,7 @@ The `SlideOverPanel` component is a panel that can appear on the right, left, or
 
 ## Skeletons
 
-Panels support skeleton UI. This is very useful if the contents of the panel are slow to render. Without a skeleton, the panel won't render until all the contents are ready. With a skeleton, the panel will open right away, and slow the skeleton UI while the render is happening.
+Panels support skeleton UI. This is very useful if the contents of the panel are slow to render. Without a skeleton, the panel won't render until all the contents are ready. With a skeleton, the panel will open right away, and show the skeleton UI while the render is happening.
 
 In the example below, try opening the panel with the skeleton turned off. You'll notice that there's a two-second delay before the panel opens, while it waits for a slow component to render. If you turn the skeleton on, the panel opens immediately and shows a loading state. The slow component appears when it's ready.
 
